--- a/style.css
+++ b/style.css
@@ -12,3 +12,8 @@ background-color: #F08080;
   border-bottom: 1px solid white;
   background-color: rgba(0,0,0, 0.1)
 }
+
+
+img{
+  width: 200px;  
+}
