--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body { 
-
-  color: #A26585;
+background-color: #132743;
+  color: #ffb5b5;
   font-family: Georgia, Times New Roman, sans-serif;
 }
 
